docs/doc_assets/css/styleguide.scss
/* ... */
.menu-btn {
  @include media($medium-screen + $width-nav-sidebar) {
    display: none;
  }

  @include padding(1.5rem null);
  display: inline;
  float: left;
  margin-top: -4px;
  color: $color-white;
  background-color: $color-primary;
  font-size: 1.5rem;
  width: 15%;
  text-align: center;

  &:hover {
    text-decoration: none;
    color: $color-white;
    background-color: $color-primary-darker;
  }

  &:visited {
    color: $color-white;
  }
}

#menu-content {
  @media (max-width: $medium-screen + $width-nav-sidebar) {
    $sliding-panel-width: 220px;

    @include position(fixed, 0 auto 0 0);
    @include size($sliding-panel-width 100%);
    @include transform(translateX(- $sliding-panel-width));
    background: $color-white;
    -webkit-overflow-scrolling: touch;
    overflow-y: auto;
    z-index: 999999;
    display: block;

    &.is-visible {
      @include transition(all 0.25s linear);
      @include transform(translateX(0));
    }
  }
}

.overlay {
  @include position(fixed, 0);
  @include transition;
  background: $color-dark;
  opacity: 0;
  visibility: hidden;
  z-index: 9999;

  &.is-visible {
    visibility: visible;
  }
}

// Based on code by Diego Eis

// Sidebar Nav --------- //

.sidenav {
  @include position(fixed, $site-top null 0 0);
  width: $width-nav-sidebar;
  border-right: 1px solid $color-gray-light;
  padding: 5rem 3rem 3rem 3rem;
  overflow: auto;
  display: none;
  z-index: -1;

  .lt-ie9 & {
    width: 25%;
  }

  .usa-sidenav-sub_list {
    display: none;
  }

  @include media($medium-screen + $width-nav-sidebar) {
    display: block;
  }
}

.visual-style .sidenav .visual-style-sublist {
  display: block;

  ul {
    display: block;
  }
}

.form-controls .sidenav .form-controls-sublist {
  display: block;
}

.form-templates .sidenav .form-templates-sublist {
  display: block;
}

.footers .sidenav .footers-sublist {
  display: block;
}

// Main Content --------- //

.main-content {
  @include media($medium-screen) {
    top: $site-top;
  }

  @include position(absolute, 4rem 0 0 null);
  @include padding(1em null 0);
  width: 100%;
  z-index: -1;

  .lt-ie9 & {
    width: 75%;
  }

  @include media($medium-screen + $width-nav-sidebar) {
    width: calc(100% - #{$width-nav-sidebar});

    .lt-ie9 & {
      width: 75%;
    }
  }
}

// Styleguide Content -------- //

.styleguide-content {
  margin-bottom: 5em;
  max-width: $site-max-width;
  @include padding(null 2em);
  position: relative;

  > h1 {
    margin-top: 3.4rem;

    &:not(:first-child) {
      margin-top: 1.5em;
    }
  }

  @media (min-width: $medium-screen + $width-nav-sidebar) {
    @include padding(null 3em);
  }
}

// Footer --------------- //

.usa-styleguide-footer {
  background-color: $color-primary-darker;
  @include padding(3rem null);

// This is a styleguide-only rule and is not needed in the main library code for
// the footer component which uses different styles
// TODO investigate why it's not needed in the main library CSS
  p,
  a {
    @include media($medium-screen) {
      margin-bottom: 0;
    }

    color: $color-white;
    font-size: $h5-font-size;
    @include margin(0 null 1.5rem);
  }
}

// Pattern Preview Boxes -------- //

.preview {
  $color-grayee: #eeeeee;
  @include clearfix();
  background-color: $color-white;
  @include margin(2em null);
  padding: 1em $site-margins;
  border: 1px solid $color-grayee;

  .is-peripheral {
    opacity: .2;
  }

  .usa-background-dark {
    display: inline-block;
    @include padding(null 1em);
  }
}

.preview-no_border {
  border: 0;
  @include margin(0 null 2em);
  padding: 0;
}

// Code Sample Boxes --------- //

.code-snippets {

  .code-snippet-button::after {
    content: '\25be  hide code';
  }

  &.hidden {

    table {
      display: none;
    }

    .code-snippet-button::after {
      content: '\25b8  show code';
    }
  }

  table {

    table-layout: fixed;
    width: 100%;
    padding: 3em 0 0 0;

    td {
      $color-white-smoke: #f5f5f5;
      $color-gray88: #e0e0e0;
      background-color: $color-white-smoke;
      border: 1px solid $color-gray88;
      position: relative;
      vertical-align: top;

      .code-copy-button {
        @include position(absolute, 0 0 null null);
        border-radius: 0;
        margin: 0;

        &:hover {
          background-color: $color-base;
        }
      }
    }

    th {
      border: none;
      text-align: left;
    }

    pre,
    code {
      direction: ltr;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
      word-break: normal;
    }

    pre {
      padding: 0 1em 1em 1em;
    }

    code {
      font-size: $base-font-size / 1.5;
      line-height: 1.4em;
      word-wrap: break-word;

      &.language-html {
        max-width: 25em;
      }
    }
  }
}

// Download Code Boxes --------- //

.download-code {
  padding-top: 3em;
}

// Search bar grid --------- //

.preview-search-bar {
  .usa-grid {
    padding: 0;
  }
}

// Custom styles to illustrate invisible grid for web design standards

.grid-example {
  .usa-grid {
    background: $color-grid-light;

    > * {
      color: $color-white;
      padding: 1em;
      background: $color-grid-dark;
      @include margin(.5em null);
    }
  }

  .usa-width-one-twelfth {
    @include media($medium-screen) {
      @include padding(null 0);
    }
  }
}

.grid-example-blank {
  .usa-grid {
    text-align: center;
  }
}

.grid-text {
  .usa-grid {
    background: $color-grid-dark;

    > * {
      background: $color-grid-light;
      color: $color-black;
    }

    h3 {
      margin-top: 0;
    }

    p {
      margin-bottom: 0;
    }
  }
}

h3 + .button_wrapper {
  margin-top: -.5em;
}

.button_wrapper {
  clear: both;
  display: block;
  margin-left: -1rem;
  padding: 0 1rem;

  @include media($small-screen) {
    display: table;
  }

  button:last-child {
    margin-right: 0;
  }
}

.button_wrapper-dark {
  background: $color-gray-dark;
}

.usa-heading {
  color: $color-primary-darker;
}
/* ... */

